--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+== Version 0.2: August 8th, 2012 ==
+
+* Support for fact store serialization.
+* Parallel fact store loading.
+* Support for in-memory fact stores.
+* Multithreading of entity alignments.
+* Approximate literal matching with shinglings.
+* Levenshtein similarity on literals.
+* README file.
+
 == Version 0.1 ==
 
 * Initial release.
